fix: pagination spacing

--- a/css/style.css
+++ b/css/style.css
@@ -10291,7 +10291,14 @@ button.testimonial-arrow-btn:hover i {
   gap: 12px;
   flex-wrap: wrap;
   margin-bottom: 40px;
-  margin-top: 56px;
+  margin-top: 20px;
+}
+@media only screen and (min-width: 0px) and (max-width: 767px) {
+  .basic-pagination,
+  .page-links,
+  .wp-block-query-pagination-numbers {
+    margin-top: 32px;
+  }
 }
 .basic-pagination ul,
 .page-links ul,
